// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> renders 1`] = `
.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c1 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c1,
[aria-selected="true"] .c1 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c3 {
  padding: 1.6rem;
  -webkit-animation: iHsNqv 250ms ease-in;
  animation: iHsNqv 250ms ease-in;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  cursor: pointer;
}

.c0:hover,
.c0:focus,
.c0:focus-within,
.c0[aria-expanded="true"] {
  color: #3e486e;
}

.c2 {
  margin: 2rem 0 2rem 1rem;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c3 {
    padding: 1rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="accordion"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class=""
        data-accordion-component="AccordionItem"
        index="0"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-0"
            aria-disabled="false"
            aria-expanded="false"
            class="c0"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-0"
            role="button"
            tabindex="0"
          >
            <svg
              class="c1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c2"
            >
              This is the title
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-0"
          class="c3"
          data-accordion-component="AccordionItemPanel"
          data-hidden="true"
          id="accordion__panel-0"
        >
          <div
            class="c4"
          >
            <h3>
              This is the title
            </h3>
          </div>
          <div
            class="c5"
          >
            this is the body
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders as a hierarchy accordion with an icon 1`] = `
.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c1 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c1,
[aria-selected="true"] .c1 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c3 {
  padding: 1.6rem;
  -webkit-animation: iHsNqv 250ms ease-in;
  animation: iHsNqv 250ms ease-in;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  cursor: pointer;
}

.c0:hover,
.c0:focus,
.c0:focus-within,
.c0[aria-expanded="true"] {
  color: #3e486e;
}

.c2 {
  margin: 2rem 0 2rem 1rem;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c3 {
    padding: 1rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="accordion"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class=""
        data-accordion-component="AccordionItem"
        index="0"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-3"
            aria-disabled="false"
            aria-expanded="false"
            class="c0"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-3"
            role="button"
            tabindex="0"
          >
            <svg
              class="c1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c2"
            >
              This is the title
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-3"
          class="c3"
          data-accordion-component="AccordionItemPanel"
          data-hidden="true"
          id="accordion__panel-3"
        >
          <div
            class="c4"
          >
            <span>
              This is the title
            </span>
          </div>
          <div
            class="c5"
          >
            this is the body
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders as a tile accordion with an icon 1`] = `
.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c1 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c1,
[aria-selected="true"] .c1 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c3 {
  padding: 1.6rem;
  -webkit-animation: iHsNqv 250ms ease-in;
  animation: iHsNqv 250ms ease-in;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  cursor: pointer;
}

.c0:hover,
.c0:focus,
.c0:focus-within,
.c0[aria-expanded="true"] {
  color: #3e486e;
}

.c2 {
  margin: 2rem 0 2rem 1rem;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c3 {
    padding: 1rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="accordion"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class=""
        data-accordion-component="AccordionItem"
        index="0"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-2"
            aria-disabled="false"
            aria-expanded="false"
            class="c0"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-2"
            role="button"
            tabindex="0"
          >
            <svg
              class="c1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c2"
            >
              This is the title
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-2"
          class="c3"
          data-accordion-component="AccordionItemPanel"
          data-hidden="true"
          id="accordion__panel-2"
        >
          <div
            class="c4"
          >
            <span>
              This is the title
            </span>
          </div>
          <div
            class="c5"
          >
            this is the body
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders as h2 1`] = `
.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c1 {
  position: relative;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #7994d4;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

[aria-expanded="true"] .c1,
[aria-selected="true"] .c1 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c3 {
  padding: 1.6rem;
  -webkit-animation: iHsNqv 250ms ease-in;
  animation: iHsNqv 250ms ease-in;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
  cursor: pointer;
}

.c0:hover,
.c0:focus,
.c0:focus-within,
.c0[aria-expanded="true"] {
  color: #3e486e;
}

.c2 {
  margin: 2rem 0 2rem 1rem;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c3 {
    padding: 1rem 0;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

<div>
  <div
    class="accordion"
    data-accordion-component="Accordion"
  >
    <div>
      <div
        class=""
        data-accordion-component="AccordionItem"
        index="0"
      >
        <div
          aria-level="3"
          class="accordion__heading"
          data-accordion-component="AccordionItemHeading"
          role="heading"
        >
          <div
            aria-controls="accordion__panel-1"
            aria-disabled="false"
            aria-expanded="false"
            class="c0"
            data-accordion-component="AccordionItemButton"
            id="accordion__heading-1"
            role="button"
            tabindex="0"
          >
            <svg
              class="c1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="9 18 15 12 9 6"
              />
            </svg>
            <div
              class="c2"
            >
              This is the title
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="accordion__heading-1"
          class="c3"
          data-accordion-component="AccordionItemPanel"
          data-hidden="true"
          id="accordion__panel-1"
        >
          <div
            class="c4"
          >
            <h2>
              This is the title
            </h2>
          </div>
          <div
            class="c5"
          >
            this is the body
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
